--- a/versions.cabal
+++ b/versions.cabal
@@ -21,6 +21,8 @@ library
   other-extensions:    OverloadedStrings
   build-depends:       base >=4.8 && <4.9
                      , parsec >=3.1 && <3.2
+                     , tasty >= 0.10.1.2
+                     , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
                      , text-show >= 2
   -- hs-source-dirs:      
