--- a/versions.cabal
+++ b/versions.cabal
@@ -20,10 +20,29 @@ library
   -- other-modules:       
   other-extensions:    OverloadedStrings
   build-depends:       base >=4.8 && <4.9
+                     , either >= 4.4.1
+                     , extra >= 1.4.1
                      , parsec >=3.1 && <3.2
                      , tasty >= 0.10.1.2
                      , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
                      , text-show >= 2
   -- hs-source-dirs:      
+  default-language:    Haskell2010
+
+test-suite versions-test
+  type:                exitcode-stdio-1.0
+  other-extensions:    OverloadedStrings
+
+  build-depends:       base >=4.8 && <4.9
+                     , either >= 4.4.1
+                     , extra >= 1.4.1
+                     , tasty >= 0.10.1.2
+                     , tasty-hunit >= 0.9.2
+                     , text >=1.2 && <1.3
+                     , text-show >= 2
+                     , versions
+
+  hs-source-dirs:      test
+  main-is:             Test.hs
   default-language:    Haskell2010
