--- a/versions.cabal
+++ b/versions.cabal
@@ -20,6 +20,7 @@ library
                      , either >= 4.4.1
                      , extra >= 1.4.1
                      , parsec >=3.1 && <3.2
+                     , semigroups >= 0.16.2.2
                      , tasty >= 0.10.1.2
                      , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
@@ -34,6 +35,7 @@ test-suite versions-test
   build-depends:       base >=4.8 && <4.9
                      , either >= 4.4.1
                      , extra >= 1.4.1
+                     , semigroups >= 0.16.2.2
                      , tasty >= 0.10.1.2
                      , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
