--- a/versions.cabal
+++ b/versions.cabal
@@ -13,7 +13,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Distribution.Version
+  exposed-modules:     Data.Versioning
   -- other-modules:       
   other-extensions:    OverloadedStrings
   build-depends:       base >=4.8 && <4.9
