Much more docs, fixed last parse error

--- a/versions.cabal
+++ b/versions.cabal
@@ -1,7 +1,25 @@
 name:                versions
-version:             0.3.0
+version:             1.0.0
 synopsis:            Types and parsers for software version numbers.
--- description:         
+description:         A library for parsing and comparing software version numbers.
+                     .
+                     We like to give version numbers to our software in a myriad of different
+                     ways. Some ways follow strict guidelines for incrementing and comparison.
+                     Some follow conventional wisdom and are generally self-consistent.
+                     Some are just plain asinine. This library provides a means of parsing
+                     and comparing /any/ style of versioning, be it a nice Semantic Version
+                     like this:
+                     .
+                     > 1.2.3-r1+git123
+                     .
+                     ...or a monstrosity like this:
+                     .
+                     > 2:10.2+0.0093r3+1-1
+                     .
+                     Please switch to <http://semver.org Semantic Versioning> if you
+                     aren't currently using it. It provides consistency in version
+                     incrementing and has the best constraints on comparisons.
+
 license:             BSD3
 license-file:        LICENSE
 author:              Colin Woodbury
