--- a/versions.cabal
+++ b/versions.cabal
@@ -30,17 +30,17 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+source-repository head
+  type:     git
+  location: git://github.com/fosskers/haskell-versions.git
+
 library
   exposed-modules:     Data.Versions
   -- other-modules:       
   other-extensions:    OverloadedStrings
   build-depends:       base >=4.8 && <4.9
-                     , either >= 4.4.1
-                     , extra >= 1.4.1
                      , parsec >=3.1 && <3.2
                      , semigroups >= 0.16.2.2
-                     , tasty >= 0.10.1.2
-                     , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
                      , text-show >= 2
   -- hs-source-dirs:      
