--- a/versions.cabal
+++ b/versions.cabal
@@ -50,6 +50,7 @@ test-suite versions-test
 
   build-depends:       base >=4.8 && <4.9
                      , either >= 4.4.1
+                     , microlens >= 0.4 && < 0.5
                      , tasty >= 0.10.1.2
                      , tasty-hunit >= 0.9.2
                      , text >=1.2 && <1.3
