--- a/versions.cabal
+++ b/versions.cabal
@@ -28,6 +28,8 @@ category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
 
+extra-source-files:    CHANGELOG.md
+
 source-repository head
   type:     git
   location: git://github.com/fosskers/haskell-versions.git
