--- a/versions.cabal
+++ b/versions.cabal
@@ -40,7 +40,7 @@ library
   other-extensions:    OverloadedStrings
 
   build-depends:       base >=4.8 && <4.9
-                     , parsec >=3.1 && <3.2
+                     , megaparsec >= 4 && < 5
                      , semigroups >= 0.16.2.2
                      , text >=1.2 && <1.3
 
