--- a/versions.cabal
+++ b/versions.cabal
@@ -29,6 +29,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 extra-source-files:    CHANGELOG.md
+                     , README.md
 
 source-repository head
   type:     git
