--- a/versions.cabal
+++ b/versions.cabal
@@ -62,3 +62,4 @@ test-suite versions-test
   hs-source-dirs:      test
   main-is:             Test.hs
   default-language:    Haskell2010
+  ghc-options: -Wall -threaded
