--- a/versions.cabal
+++ b/versions.cabal
@@ -47,6 +47,8 @@ library
 
   default-language:    Haskell2010
 
+  ghc-options: -fwarn-unused-imports -fwarn-unused-binds
+
 test-suite versions-test
   type:                exitcode-stdio-1.0
   other-extensions:    OverloadedStrings
