--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ addons:
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
 env:
-- ARGS="--resolver nightly-2016-07-01"
+  - ARGS="--resolver lts-6.31"
+  - ARGS="--resolver lts-7.22"
+  - ARGS="--resolver lts-8.14"
 
 before_install:
 # Download and unpack the stack executable
