Handle parsing 0 in Versions properly
- It turns out we had to be a bit more careful than we were. Versions
  like `1.0rc1` were parsing incorrectly as Messes.

--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,8 @@ extra-source-files:
 ghc-options:
   - -fwarn-unused-imports
   - -fwarn-unused-binds
+  - -fwarn-name-shadowing
+  - -fwarn-unused-matches
 
 dependencies:
   - base >=4.8 && <4.10
