--- a/versions.cabal
+++ b/versions.cabal
@@ -48,7 +48,7 @@ library
     , text >=1.2 && <1.3
     , megaparsec >=4 && <6
   default-language: Haskell2010
-  ghc-options: -fwarn-unused-imports -fwarn-unused-binds
+  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches
 
 test-suite versions-test
   type: exitcode-stdio-1.0
@@ -63,4 +63,4 @@ test-suite versions-test
       test
   main-is: Test.hs
   default-language: Haskell2010
-  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded
+  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -threaded
