--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ addons:
 # change flags or use --stack-yaml to point to a different file.
 env:
   - ARGS="--stack-yaml stack-710.yaml"
-  - ARGS="--resolver lts-7.22"
-  - ARGS="--resolver lts-8.14"
+  - ARGS="--resolver lts-7.24"
+  - ARGS="--resolver lts-8.15"
 
 before_install:
 # Download and unpack the stack executable
@@ -26,11 +26,7 @@ before_install:
 # This line does all of the work: installs GHC if necessary, build the library,
 # executables, and test suites, and runs the test suites. --no-terminal works
 # around some quirks in Travis's terminal implementation.
-script: stack $ARGS --no-terminal --install-ghc test --coverage
-
-after_script:
-  - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar -xj
-  - ./shc versions versions-test
+script: stack $ARGS --no-terminal --install-ghc test
 
 # Caching so the next build will be fast too.
 cache:
