--- a/package.yaml
+++ b/package.yaml
@@ -53,11 +53,11 @@ dependencies:
 library:
   exposed-modules:
     - Data.Versions
-
   other-modules: []
-
   dependencies:
     - megaparsec >=4 && <6
+    - deepseq >= 1.4 && < 1.5
+    - hashable >= 1.2 && < 1.3
 
 tests:
   versions-test:
