--- a/versions.cabal
+++ b/versions.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yaml by hpack version 0.17.0.
+-- This file has been generated from package.yaml by hpack version 0.17.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -45,6 +45,8 @@ library
       base >=4.8 && <4.10
     , text >=1.2 && <1.3
     , megaparsec >=4 && <6
+    , deepseq >= 1.4 && < 1.5
+    , hashable >= 1.2 && < 1.3
   default-language: Haskell2010
   ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches
 
