--- a/package.yaml
+++ b/package.yaml
@@ -45,17 +45,19 @@ ghc-options:
   - -fwarn-unused-binds
   - -fwarn-name-shadowing
   - -fwarn-unused-matches
+  - -fwarn-incomplete-patterns
+  - -Wincomplete-uni-patterns
 
 dependencies:
-  - base >=4.8 && <4.11
-  - text >=1.2 && <1.3
+  - base >= 4.8 && < 4.11
+  - text >= 1.2 && < 1.3
 
 library:
   exposed-modules:
     - Data.Versions
   other-modules: []
   dependencies:
-    - megaparsec >=6 && <7
+    - megaparsec >= 6 && < 7
     - deepseq >= 1.4 && < 1.5
     - hashable >= 1.2 && < 1.3
 
