--- a/package.yaml
+++ b/package.yaml
@@ -68,7 +68,10 @@ tests:
     ghc-options:
       - -threaded
     dependencies:
-      - microlens >=0.4 && <0.5
-      - tasty >=0.10.1.2
-      - tasty-hunit >=0.9.2
+      - checkers >= 0.4 && < 0.5
+      - microlens >= 0.4 && < 0.5
+      - QuickCheck >= 2.9 && < 2.11
+      - tasty >= 0.10.1.2
+      - tasty-hunit >= 0.9.2
+      - tasty-quickcheck >= 0.8 && < 0.10
       - versions
