--- a/versions.cabal
+++ b/versions.cabal
@@ -42,25 +42,28 @@ library
   exposed-modules:
       Data.Versions
   build-depends:
-      base >=4.8 && <4.11
-    , text >=1.2 && <1.3
-    , megaparsec >=6 && <7
+      base >= 4.8 && < 4.11
+    , text >= 1.2 && < 1.3
+    , megaparsec >= 6 && < 7
     , deepseq >= 1.4 && < 1.5
     , hashable >= 1.2 && < 1.3
   default-language: Haskell2010
-  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches
+  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -fwarn-incomplete-patterns -Wincomplete-uni-patterns
 
 test-suite versions-test
   type: exitcode-stdio-1.0
   build-depends:
-      base >=4.8 && <4.11
-    , text >=1.2 && <1.3
-    , microlens >=0.4 && <0.5
-    , tasty >=0.10.1.2
-    , tasty-hunit >=0.9.2
+      base >= 4.8 && < 4.11
+    , text >= 1.2 && < 1.3
+    , checkers >= 0.4 && < 0.5
+    , microlens >= 0.4 && < 0.5
+    , QuickCheck >= 2.9 && < 2.11
+    , tasty >= 0.10.1.2
+    , tasty-hunit >= 0.9.2
+    , tasty-quickcheck >= 0.8 && < 0.10
     , versions
   hs-source-dirs:
       test
   main-is: Test.hs
   default-language: Haskell2010
-  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -threaded
+  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -fwarn-incomplete-patterns -Wincomplete-uni-patterns -threaded
