--- a/versions.cabal
+++ b/versions.cabal
@@ -1,7 +1,3 @@
--- This file has been generated from package.yaml by hpack version 0.17.1.
---
--- see: https://github.com/sol/hpack
-
 name:           versions
 version:        3.3.1
 synopsis:       Types and parsers for software version numbers.
@@ -42,25 +38,25 @@ library
   exposed-modules:
       Data.Versions
   build-depends:
-      base >= 4.8 && < 4.11
-    , text >= 1.2 && < 1.3
-    , megaparsec >= 6 && < 7
-    , deepseq >= 1.4 && < 1.5
-    , hashable >= 1.2 && < 1.3
+      base >=4.8 && <4.11
+    , deepseq >=1.4 && <1.5
+    , hashable >=1.2 && <1.3
+    , megaparsec >=6 && <7
+    , text >=1.2 && <1.3
   default-language: Haskell2010
   ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing -fwarn-unused-matches -fwarn-incomplete-patterns -Wincomplete-uni-patterns
 
 test-suite versions-test
   type: exitcode-stdio-1.0
   build-depends:
-      base >= 4.8 && < 4.11
-    , text >= 1.2 && < 1.3
-    , checkers >= 0.4 && < 0.5
-    , microlens >= 0.4 && < 0.5
-    , QuickCheck >= 2.9 && < 2.11
-    , tasty >= 0.10.1.2
-    , tasty-hunit >= 0.9.2
-    , tasty-quickcheck >= 0.8 && < 0.10
+      QuickCheck >=2.9 && <2.11
+    , base >=4.8 && <4.11
+    , checkers >=0.4 && <0.5
+    , microlens >=0.4 && <0.5
+    , tasty >=0.10.1.2
+    , tasty-hunit >=0.9.2
+    , tasty-quickcheck >=0.8 && <0.10
+    , text >=1.2 && <1.3
     , versions
   hs-source-dirs:
       test
