More config tweaks
- I suppose I'll keep using `hpack`, but manually.
  The YAML format is still more convenient.

--- a/package.yaml
+++ b/package.yaml
@@ -65,6 +65,7 @@ tests:
   versions-test:
     main: Test.hs
     source-dirs: test
+    other-modules: []
     ghc-options:
       - -threaded
     dependencies:
