--- a/package.yaml
+++ b/package.yaml
@@ -1,35 +1,28 @@
 name: versions
-version: '3.3.1'
+version: '3.3.2'
 synopsis: Types and parsers for software version numbers.
-description: ! 'A library for parsing and comparing software version numbers.
-
-  We like to give version numbers to our software in a myriad of
-
-  ways. Some ways follow strict guidelines for incrementing and comparison.
-
-  Some follow conventional wisdom and are generally self-consistent.
-
-  Some are just plain asinine. This library provides a means of parsing
-
-  and comparing /any/ style of versioning, be it a nice Semantic Version
-
-  like this:
+description: 'A library for parsing and comparing software version numbers.
+             We like to give version numbers to our software in a myriad of
+             ways. Some ways follow strict guidelines for incrementing and comparison.
+             Some follow conventional wisdom and are generally self-consistent.
+             Some are just plain asinine. This library provides a means of parsing
+             and comparing /any/ style of versioning, be it a nice Semantic Version
+             like this:
 
 
-  > 1.2.3-r1+git123
+             > 1.2.3-r1+git123
 
 
-  ...or a monstrosity like this:
+             ...or a monstrosity like this:
 
 
-  > 2:10.2+0.0093r3+1-1
+             > 2:10.2+0.0093r3+1-1
 
 
-  Please switch to <http://semver.org Semantic Versioning> if you
+             Please switch to <http://semver.org Semantic Versioning> if you
+             aren''t currently using it. It provides consistency in version
+             incrementing and has the best constraints on comparisons.'
 
-  aren''t currently using it. It provides consistency in version
-
-  incrementing and has the best constraints on comparisons.'
 category: Data
 author: Colin Woodbury
 maintainer: colingw@gmail.com
@@ -49,7 +42,7 @@ ghc-options:
   - -Wincomplete-uni-patterns
 
 dependencies:
-  - base >= 4.8 && < 4.11
+  - base >= 4.8 && < 4.12
   - text >= 1.2 && < 1.3
 
 library:
@@ -68,10 +61,11 @@ tests:
     other-modules: []
     ghc-options:
       - -threaded
+      - -with-rtsopts=-N
     dependencies:
       - checkers >= 0.4 && < 0.5
       - microlens >= 0.4 && < 0.5
-      - QuickCheck >= 2.9 && < 2.11
+      - QuickCheck >= 2.9 && < 2.12
       - tasty >= 0.10.1.2
       - tasty-hunit >= 0.9.2
       - tasty-quickcheck >= 0.8 && < 0.10
