Remove `VParser` and expose new `versioning` function

--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,7 @@ ghc-options:
   - -fwarn-name-shadowing
   - -fwarn-unused-matches
   - -fwarn-incomplete-patterns
+  - -fwarn-redundant-constraints
   - -Wincomplete-uni-patterns
 
 dependencies:
