--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,9 @@
-resolver: lts-12.10
+# resolver: lts-12.10
+resolver: nightly-2018-09-30
 
 packages:
   - .
 
 extra-deps:
-  - QuickCheck-2.12.4
+  - QuickCheck-2.12.5
   - megaparsec-7.0.1
