--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,17 @@
-image: fpco/stack-build:lts-13
+image: haskell:8.6
+
+variables:
+  STACK_ROOT: "${CI_PROJECT_DIR}/.stack"
+
+cache:
+  paths:
+    - .stack
+    - .stack-work
 
 stages:
   - test
 
-ghc-8.6.3:
+ghc-8.2.2:
   stage: test
   script:
     - stack test --fast --system-ghc
