--- a/package.yaml
+++ b/package.yaml
@@ -40,17 +40,17 @@ ghc-options:
   - -Wredundant-constraints
 
 dependencies:
-  - base >= 4.8 && < 4.13
-  - megaparsec >= 7 && < 8
-  - text >= 1.2 && < 1.3
+  - base >= 4.8
+  - megaparsec >= 7
+  - text >= 1.2
 
 library:
   exposed-modules:
     - Data.Versions
   other-modules: []
   dependencies:
-    - deepseq >= 1.4 && < 1.5
-    - hashable >= 1.2 && < 1.3
+    - deepseq >= 1.4
+    - hashable >= 1.2
 
 tests:
   versions-test:
@@ -62,10 +62,10 @@ tests:
       - -with-rtsopts=-N
     dependencies:
       - base-prelude
-      - checkers >= 0.4 && < 0.5
-      - microlens >= 0.4 && < 0.5
-      - QuickCheck >= 2.9 && < 2.13
+      - checkers >= 0.4
+      - microlens >= 0.4
+      - QuickCheck >= 2.9
       - tasty >= 0.10.1.2
       - tasty-hunit >= 0.9.2
-      - tasty-quickcheck >= 0.8 && < 0.11
+      - tasty-quickcheck >= 0.8
       - versions
