--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,17 @@ jobs:
     steps:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
+
       - name: Clone project
         uses: actions/checkout@v2
+
+      - name: Cache dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.stack-work
+          key: ${{ runner.os }}-${{ hashFiles('stack.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
       - name: Build and run tests
         run: "stack test --fast --no-terminal"
