--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Build and Tests
+name: Tests
 on:
   pull_request:
   push:
@@ -9,6 +9,8 @@ jobs:
   build:
     name: CI
     runs-on: ubuntu-latest
+    matrix:
+      resolver: ['lts-15.3', 'lts-14.27', 'lts-12.26', 'lts-11.22']
     steps:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
@@ -20,9 +22,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-${{ hashFiles('stack.yaml') }}
+          key: ${{ runner.os }}-${{ matrix.resolver }}-${{ hashFiles('stack.yaml') }}
           restore-keys: |
+            ${{ runner.os }}-${{ matrix.resolver }}-
             ${{ runner.os }}-
 
       - name: Build and run tests
-        run: "stack test --fast --no-terminal"
+        run: 'stack test --fast --no-terminal --resolver=${{ matrix.resolver }}'
