--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,10 @@ jobs:
   build:
     name: CI
     runs-on: ubuntu-latest
-    matrix:
-      resolver: ['lts-15.3', 'lts-14.27', 'lts-12.26', 'lts-11.22']
+    strategy:
+      fail-fast: false
+      matrix:
+        resolver: ['lts-15.3', 'lts-14.27', 'lts-12.26', 'lts-11.22']
     steps:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
