--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup GHC
-        uses: actions/setup-haskell
+        uses: actions/setup-haskell@v1
         with:
           ghc-version: "8.8.2"
 
