--- a/versions.cabal
+++ b/versions.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               versions
-version:            4.0.3
+version:            5.0.0
 synopsis:           Types and parsers for software version numbers.
 description:
   A library for parsing and comparing software version numbers. We like to give
@@ -19,6 +19,8 @@ description:
   Please switch to <http://semver.org Semantic Versioning> if you aren't
   currently using it. It provides consistency in version incrementing and has
   the best constraints on comparisons.
+  .
+  This library implements version @2.0.0@ of the SemVer spec.
 
 category:           Data
 homepage:           https://github.com/fosskers/versions
