--- a/versions.cabal
+++ b/versions.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               versions
-version:            5.0.1
+version:            5.0.2
 synopsis:           Types and parsers for software version numbers.
 description:
   A library for parsing and comparing software version numbers. We like to give
@@ -42,7 +42,7 @@ common commons
   build-depends:
     , base        >=4.10 && <4.17
     , megaparsec  >=7
-    , text        >=1.2
+    , text        ^>=1.2 || ^>= 2.0
 
 library
   import:          commons
