--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,13 +8,71 @@ on:
 jobs:
   build:
     name: CI
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        resolver:
+          [
+            "lts-20.20",
+            "lts-19.33",
+            "lts-18.28",
+            "lts-16.31",
+            "lts-14.27",
+            "lts-12.26",
+            "lts-11.22",
+            "lts-9.21",
+          ]
+        include:
+          - resolver: "lts-20.20"
+            os: ubuntu-latest
+            ghc: "9.2.7"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-19.33"
+            os: ubuntu-latest
+            ghc: "9.0.2"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-18.28"
+            os: ubuntu-latest
+            ghc: "8.10.7"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-16.31"
+            os: ubuntu-latest
+            ghc: "8.8.4"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-14.27"
+            os: ubuntu-latest
+            ghc: "8.6.5"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-12.26"
+            os: ubuntu-latest
+            ghc: "8.4.4"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-11.22"
+            os: ubuntu-latest
+            ghc: "8.2.2"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-9.21"
+            os: ubuntu-latest
+            ghc: "8.0.2"
+            cabal: latest
+            stack: latest
+
     steps:
       - name: Setup GHC
         uses: haskell/actions/setup@v2
         with:
-          ghc-version: "9.2.7"
+          ghc-version: ${{ matrix.ghc }}
           enable-stack: true
+          stack-version: ${{ matrix.stack }}
+          cabal-version: ${{ matrix.cabal }}
 
       - name: Clone project
         uses: actions/checkout@v3
@@ -23,9 +81,10 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-${{ hashFiles('stack.yaml') }}
+          key: ${{ runner.os }}-${{ matrix.resolver }}-${{ hashFiles('stack.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-
+            ${{ runner.os }}-${{ matrix.resolver }}-
 
+      # This entirely avoids the caching of a GHC version.
       - name: Build and run tests
-        run: "stack test --fast --no-terminal --system-ghc"
+        run: "stack test --fast --no-terminal --resolver=${{ matrix.resolver }} --system-ghc"
