--- a/versions.cabal
+++ b/versions.cabal
@@ -51,6 +51,7 @@ library
     , deepseq   >=1.4
     , hashable  >=1.2
     , parser-combinators >= 1.0
+    , template-haskell >= 2.16
 
 test-suite versions-test
   import:         commons
