ci: widen bound and restore tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
             "lts-20.26",
             "lts-19.33",
             "lts-18.28",
+            "lts-16.31",
+            "lts-14.27",
           ]
         include:
           - resolver: "lts-21.15"
@@ -38,6 +40,16 @@ jobs:
           - resolver: "lts-18.28"
             os: ubuntu-latest
             ghc: "8.10.7"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-16.31"
+            os: ubuntu-latest
+            ghc: "8.8.4"
+            cabal: latest
+            stack: latest
+          - resolver: "lts-14.27"
+            os: ubuntu-latest
+            ghc: "8.6.5"
             cabal: latest
             stack: latest
 
