--- a/versions.cabal
+++ b/versions.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               versions
-version:            6.0.3
+version:            6.0.4
 synopsis:           Types and parsers for software version numbers.
 description:
   A library for parsing and comparing software version numbers. We like to give
@@ -42,7 +42,7 @@ common commons
   build-depends:
     , base        >=4.10 && <4.20
     , megaparsec  >=7
-    , text        ^>=1.2 || ^>= 2.1
+    , text        ^>=1.2 || >= 2.0 && < 2.2
     , template-haskell >= 2.15
 
 library
